--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "swagger-jsdoc": "^1.3.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
