--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^8.11.5",
     "swagger-jsdoc": "^1.3.0",
     "swagger-ui-express": "^5.0.0"
