--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.11.5",
+    "stripe": "^15.6.0",
     "swagger-jsdoc": "^1.3.0",
     "swagger-ui-express": "^5.0.0"
   }
